.tekton/infrastructure/test-reports-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-reports-service
  namespace: tekton-pipelines
  labels:
    app: test-reports
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
      name: http
  selector:
    # This will be dynamically managed by the Pipeline
    app: test-reports
---
# Note: This service template is for reference.
# The actual pod selection will be handled dynamically
# by the Pipeline Task when it starts the HTTP server.
